CHANGES IN VERSION 2016.3 (Third version working with SEER data of 2016)
------------------------

NEW FEATURES

    o riskVsAge is a new function that yields risks vs attained age after a first cancer     



CHANGES IN VERSION 2016.2 (Second version working with SEER data of 2016)
------------------------

NEW FEATURES

    o msd now takes a ybrks vector for showing calendar year trends     

Notes
    o mkExcel2 is now mkExcelCsd, and mkExcel is now mkExcelTsd, to emphasize that their inputs are the
    outputs of csd and tsd, respectively. mkExcelTsd and tsd are internal.
    



CHANGES IN VERSION 2016.1 (First version working with the new SEER data release of 2016)
------------------------

NEW FEATURES

    o AML/MDS (leukemia 2016), CLL (leukemia research 2016), and CML (AAPSJ 2016) scripts were added to doc/papers      


Notes
    o Many fields were deleted or renamed in the SAS file of the 2016 SEER data release. Names used in my scipts 
      that changed were reverted to originals in getFields() to avoid downstream problems. Numprims is no longer  
      there, so use seqnum instead. A few fields were also added to the new SEER data release.


CHANGES IN VERSION 2015.3 (Third version working with the SEER release of 2015)
------------------------

NEW FEATURES

    o The function msd (mortality since diagnosis) computes mortality RR since diagnosis of cancer.  

    o The function csd (cancer since diagnosis), now replaces tsd in computing 2nd cancer RR after a 1st cancer. 
      An added feature of csd is that it handles different intervals of years and ages at diagnosis. This changed
      the internal list of lists structure of the output, which getDF (instead of mkDF) converts to a data.frame (DF) 
      that ggplot2 can use, and which mkExcel2 (instead of mkExcel) uses to make an Excel file. 

Notes
    o tsd, mkExcel, and mkDF are now internal functions (in terms of help pages), i.e. they can still be used by old scripts